# learnify.edu

./: .env  .env.local  Makefile  docker-compose.yml
backend/: Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/core/: __init__.py
backend/app/database/: __init__.py
backend/app/modules/authentication/: route.py
backend/docker/nginx/: Dockerfile
backend/fastapi/: Dockerfile  Makefile  alembic.ini  pyproject.toml  requirements.txt
backend/fastapi/app/: README.md  main.py  route.py
backend/fastapi/app/core/: __init__.py  base_model.py  config.py  exception.py  handler.py  model.py  redis.py  table.py
backend/fastapi/app/database/: __init__.py  session.py
backend/fastapi/app/helpers/security/: jwt.py  password.py
backend/fastapi/app/helpers/validators/: __init__.py  date.py  string.py  token.py
backend/fastapi/app/migrations/: env.py
backend/fastapi/app/migrations/versions/: 2026_06_08_03_21_230f4fec4f82_create_users_and_token_table.py  2026_06_17_02_03_b0f2a3f944a8_create_intial_db_tables.py  2026_06_17_13_10_58df2002f79b_create_initial_tables.py  2026_06_18_00_13_624c9363288c_update_student_employee_number.py  2026_06_18_01_23_a7b21fc1b25b_update_columns_to_use_enums.py  2026_06_18_03_23_eca4a070338d_update_student_id_removed_length_check.py
backend/fastapi/app/modules/authentication/: dependency.py  exceptions.py  repository.py  route.py  route_employee.py  route_enrolle.py  route_student.py  service.py  table.py  validation.py
backend/fastapi/app/modules/employee/: dependency.py  repository.py  route.py  service.py  table.py  validation.py
backend/fastapi/app/modules/enrollee/: dependency.py  repository.py  route.py  service.py  table.py  validation.py
backend/fastapi/app/modules/student/: dependency.py  repository.py  route.py  service.py  table.py  validation.py
backend/fastapi/app/modules/user/: dependency.py  exception.py  repository.py  route.py  service.py  table.py  validation.py
backend/fastapi/app/tests/: test_main.py
backend/fastapi/app/utils/email/: email.py
backend/fastapi/app/utils/security/: password.py
backend/fastapi/database/: session.py
backend/fastapi/learnify_edu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/nuxt4/: Dockerfile  Makefile  package.json  pnpm-lock.yaml
infra/mailpit/: Dockerfile
infra/nginx/: Dockerfile  nginx.conf
infra/postgres/: Dockerfile  init.sql
infra/redis/: Dockerfile
